# aerology

./: .gitignore  404.html  Cargo.toml  README.md  chapter_1.html  conf-seg-dts.html  flake.nix  index.html  installation.html  prep.html  print.html  queries.html  searchindex.js  searchindex.json  stacks.html
book/: book.toml
book/src/: SUMMARY.md  chapter_1.md  conf-seg-dts.md  installation.md  prep.md  queries.md  stacks.md
src/: arch.rs  core.rs  error.rs  gdb.rs  main.rs  pack.rs  query.pest  query.rs
